--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <main>
         <h1>Edward Santos | WDD 130</h1>
         <img src="ImagesEdward.jpg" alt="Hello my name is Edward Santos" width="200">
-        <P>Hello! My name is Edward Santos and I am from Lima, Perú. I am currently studying software development at BYU Idaho. My favorite food is Lomo Saltado and I also love eating sushi. I would love to visit Japan one day.</P>
+        <p>Hello! My name is Edward Santos and I am from Lima, Perú. I am currently studying software development at BYU Idaho. 
+        My favorite food is Lomo Saltado and I also love eating sushi. 
+        I would love to visit Japan one day. My favorite sport is soccer and My favorite soccer player is Leonel Messi.</p>
     </main>
     <footer>
         <p>@2023 🌱 Edward Santos 🌱 Lima,Perú </p>
