--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edward Santos | WDD 130</title>
+    <meta name="description" content="Edward Santos's BYU-Idaho WDD130 course home page">
+    <meta name="author" content="Edward Santos ">
+
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -15,11 +19,19 @@
     </header>
     <main>
         <h1>Edward Santos | WDD 130</h1>
-        <img src="ImagesEdward.jpg" alt="Hello my name is Edward Santos" width="200">
+        <img src="Images/profile.jpg" alt="Hello my name is Edward Santos" width="200">
         <p>Hello! My name is Edward Santos and I am from Lima, Perú. I am currently studying software development at BYU Idaho. 
         My favorite food is Lomo Saltado and I also love eating sushi. 
         I would love to visit Japan one day. My favorite sport is soccer and My favorite soccer player is Leonel Messi.</p>
     </main>
+    <aside>
+        <h2>Perú</h2>
+        <img src="images/Ciudadela-Inca.jpg"  alt="Peru's Machu Picchu">
+        <p>"Machu Picchu is a 15th-century Inca citadel located in the Eastern
+            Cordillera of southern Perú on a 2,430 meter(7,970 ft) mountain ridge.
+            It is located in the Machupicchu District within Urubamba Provinced above
+            the Secret Valley, which is 80 kilometers (50 mi)northwest of CUzco."-wiki </p>
+    </aside>
     <footer>
         <p>@2023 🌱 Edward Santos 🌱 Lima,Perú </p>
     </footer>
