added new 2nd week changes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <meta name="description" content="Edward Santos's BYU-Idaho WDD130 course home page">
     <meta name="author" content="Edward Santos ">
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-      <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Rafting Siteplan</a>
-        </nav>
+    <nav>
+        <ul>
+           <li> <a href="#">Home</a></li>
+           <li><a href="wwr/">White Water Rafting Website</a></li>
+           <li><a href="wwr/site-plan-rafting.html">White Rafting Siteplan</a></li>
+    </nav>
+        </ul>
     </header>
     <main>
         <h1>Edward Santos | WDD 130</h1>
@@ -30,7 +32,7 @@
         <p>"Machu Picchu is a 15th-century Inca citadel located in the Eastern
             Cordillera of southern Perú on a 2,430 meter(7,970 ft) mountain ridge.
             It is located in the Machupicchu District within Urubamba Provinced above
-            the Secret Valley, which is 80 kilometers (50 mi)northwest of CUzco."-wiki </p>
+            the Secret Valley, which is 80 kilometers (50 mi)northwest of Cuzco."-wiki </p>
     </aside>
     <footer>
         <p>@2023 🌱 Edward Santos 🌱 Lima,Perú </p>
