--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 <body>
     <header>
-    <nav>
-        <ul>
-           <li> <a href="#">Home</a></li>
-           <li><a href="wwr/">White Water Rafting Website</a></li>
-           <li><a href="wwr/site-plan-rafting.html">White Rafting Siteplan</a></li>
-    </nav>
-        </ul>
+        <nav>
+          <a href="#">Home</a>
+          <a href="wwr/">White Water Rafting Website</a>
+          <a href="wwr/site-plan-rafting.html">White Rafting Siteplan</a>
+          </nav>
     </header>
     <main>
         <h1>Edward Santos | WDD 130</h1>
