--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Edward Santos's BYU-Idaho WDD130 course home page">
     <meta name="author" content="Edward Santos ">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
             It is located in the Machupicchu District within Urubamba Provinced above
             the Secret Valley, which is 80 kilometers (50 mi)northwest of Cuzco."-wiki </p>
     </aside>
-    
+
     <footer>
         <p>@2023 🌱 Edward Santos 🌱 Lima,Perú </p>
     </footer>
