--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -74,7 +74,7 @@
         Springs. Since 1974, we have been family owned and operated, rafting the
         Shoshone section of Glenwood Canyon and beyond.
       </p>
-      <h3>Colored paragraph example</h3>
+      <h4>Colored paragraph example</h4>
       <p class="colored">
         Trips vary from mild and great for families, to trips exclusively for
       physically fit and experienced rafters. No matter what type of river
@@ -98,7 +98,7 @@
        alt="About Us Page Wireframe Design" width="700">
     </main>
     <footer>
-      <p>@2023 Rafting Site Document  Edward Santos WDD130</p>
+      <p>@2023 🌱 Rafting Site Document 🌱  Edward Santos 🌱 WDD130</p>
     </footer>
 </body>
 </html>
