--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
     <title>Rafting Site Plan | Edward Santos </title>
     <meta name="description" content=" rafitng site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project">
     <meta name="author" content="Edward Santos">
-    <link rel="stylesheet" href="../styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/site-plan-rafting.css"
     </head>
 <body>
     <header>
