--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <aside>
         <h2>Perú</h2>
-        <img src="images/Ciudadela-Inca.jpg"  alt="Peru's Machu Picchu">
+        <img src="Images/Ciudadela-Inca.jpg"  alt="Peru's Machu Picchu">
         <p>"Machu Picchu is a 15th-century Inca citadel located in the Eastern
             Cordillera of southern Perú on a 2,430 meter(7,970 ft) mountain ridge.
             It is located in the Machupicchu District within Urubamba Provinced above
