--- a/week1 html/index.html
+++ b/week1 html/index.html
@@ -9,6 +9,11 @@
     <meta name="author" content="Edward Santos ">
 
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" 
+  rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -16,6 +21,7 @@
           <a href="#">Home</a>
           <a href="wwr/">White Water Rafting Website</a>
           <a href="wwr/site-plan-rafting.html">White Rafting Siteplan</a>
+          <a href="https://likedin.com">Profile</a>
           </nav>
     </header>
     <main>
@@ -24,9 +30,14 @@
         <p>Hello! My name is Edward Santos and I am from Lima, Perú. I am currently studying software development at BYU Idaho. 
         My favorite food is Lomo Saltado and I also love eating sushi. 
         I would love to visit Japan one day. My favorite sport is soccer and My favorite soccer player is Leonel Messi.</p>
+   <ul class="box indent">
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/brasilia-brazil-temple" target="_blank">Brasilia Brazil Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple" target="_blank">Ogden Utah Temple</a></li>
+   </ul>
     </main>
     
-    <aside>
+    <aside class="box">
         <h2>Perú</h2>
         <img src="Images/Ciudadela-Inca.jpg"  alt="Peru's Machu Picchu">
         <p>"Machu Picchu is a 15th-century Inca citadel located in the Eastern
