--- a/week1 html/index.html
+++ b/week1 html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edward Santos | WDD 130</title>
+    <title>Edward Santos | WDD-130</title>
     <meta name="description" content="Edward Santos's BYU-Idaho WDD130 course home page">
     <meta name="author" content="Edward Santos ">
 
@@ -30,7 +30,7 @@
         <p>Hello! My name is Edward Santos and I am from Lima, Perú. I am currently studying software development at BYU Idaho. 
         My favorite food is Lomo Saltado and I also love eating sushi. 
         I would love to visit Japan one day. My favorite sport is soccer and My favorite soccer player is Leonel Messi.</p>
-   <ul class="box indent">
+   <ul class="box">
     <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
     <li><a href="https://www.churchofjesuschrist.org/temples/details/brasilia-brazil-temple" target="_blank">Brasilia Brazil Temple</a></li>
     <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple" target="_blank">Ogden Utah Temple</a></li>
