--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="About Us page">
     <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>About Us - White Water Rafting</title>
+    <title>About Us- White Water Rafting |Edward Santos </title>
 </head>
 <body>
     <header>
