--- a/wwr/about.html
+++ b/wwr/about.html
@@ -41,7 +41,7 @@
         <img src="/wwr/images/rafting-2.jpg" alt="Rafting 2">
         <img src="/wwr/images/rafting-3.jpg" alt="Rafting 3">
         <img src="/wwr/images/rafting-4.jpg" alt="Rafting 4">
-         <img src="/wwr/images/rafting-gg.avif" alt="Rafting 5">
+         <img src="/wwr/images/rafting-5.jpg" alt="Rafting 5">
          </section> 
      
     </main> 
