--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,11 +37,11 @@
      
         <section>
             <h3>Adventure Awaits You!</h3>
-        <img src="/wwr/images/rafting-1.png" alt="Rafting 1">
-        <img src="/wwr/images/rafting-2.jpg" alt="Rafting 2">
-        <img src="/wwr/images/rafting-3.jpg" alt="Rafting 3">
-        <img src="/wwr/images/rafting-4.jpg" alt="Rafting 4">
-         <img src="/wwr/images/rafting-5.jpg" alt="Rafting 5">
+        <img src="images/rafting-1.png" alt="Rafting 1">
+        <img src="images/rafting-2.jpg" alt="Rafting 2">
+        <img src="images/rafting-3.jpg" alt="Rafting 3">
+        <img src="images/rafting-4.jpg" alt="Rafting 4">
+         <img src="images/rafting-5.jpg" alt="Rafting 5">
          </section> 
      
     </main> 
