--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,11 +22,11 @@
     <main>
         
      <div class="hero">
-        <img src="/wwr/images/rafting-background.jpeg" alt="Rafting Background">
+        <img src="images/rafting-background.jpeg" alt="Rafting Background">
         <h1>White Water Rafting</h1>
         <article>
             <h2> Our Mission</h2>
-            <img src="/wwr/images/happy-client.jpg" alt="Happy Client">
+            <img src="images/happy-client.jpg" alt="Happy Client">
             <p>At Rafting Adventures, we are dedicated to providing the best white water rafting experience for our clients. Our mission is to make your adventure unforgettable, and our motto is "Ride the Rapids, Embrace the Thrill!"</p> 
         </article>
       </div>
