--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,16 +50,15 @@
     <p>@2023 White Water Rafting  | Edward Santos 🌱  WDD 130</p>
     <nav class="sociallinks">
         <a href="https://facebook.com">
-        <img src="images/Facebook.webp" alt="Facebook" >
+        <img src="images/logo_facebook.webp" alt="Facebook Logo" >
         </a>
         <a href="https://twitter.com">
-          <img src="images/twitter.webp" alt="Twitter">
+          <img src="images/logo_twitter.webp" alt="Twitter Logo">
         </a>
         <a href="https://instagram.com">
-           <img src="images/instagram.webp"  alt="Instagram">
+           <img src="images/logo_instagram.webp"  alt="Instagram Logo">
         </a>
         </nav>
 </footer>   
-
 </body>
 </html>
