--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!--27 September 2023-->
 <!DOCTYPE html>
 <html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edward Santos | WDD 130</title>
+    <title>Edward Santos|WDD 130</title>
     <meta name="description" content="Edward Santos's BYU-Idaho WDD 130 course home page">
     <meta name="author" content="Edward Santos ">
     <link rel="stylesheet" href="styles/styles.css">
@@ -19,11 +18,13 @@
     <header>
         <nav>
           <a href="#">Home</a>
-          <a href="wwr/">White Water Rafting Website</a>
-          <a href="wwr/site-plan-rafting.html">White Rafting Siteplan</a>
-          <a href="https://likedin.com">Profile</a>
+          <a href="wwr/">Rafting Website</a>
+          <a href="wwr/site-plan-rafting.html">Siteplan</a>
+          <a href="https://likedin.com">LikedIn</a>
+          <a href="https://facebook.com">Facebook</a>
           </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Edward Santos | WDD 130</h1>
         <img src="Images/profile.jpg" alt="Hello my name is Edward Santos" width="200">
@@ -47,6 +48,7 @@
             It is located in the Machupicchu District within Urubamba Provinced above
             the Secret Valley, which is 80 kilometers (50 mi)northwest of Cuzco."-wiki </p>
     </aside>
+    </div>
 
     <footer>
         <p>@2023 🌱 Edward Santos 🌱 Lima,Perú </p>
