--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Edward Santos | Home</title>
+    <meta name="description" content="Experience the thrill of whitewater rafting with Edward Santos. Learn more about our adventures.">
+    <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -37,29 +39,57 @@
 
         <main class="home-grid">
             <section class="rivers-card">
-                <img class="card-img" src="images/rafting-2.jpg" alt="rivers in forest">
-                <img class="icon" src="images/rivers.png" alt="river icon">
-                <h2>Rivers</h2>
+                <figure>
+                    <img class="card-img" src="images/rafting-2.jpg" alt="rivers in forest">
+                    <img class="icon" src="images/rivers.png" alt="river icon">
+                    <figcaption>
+                        <h2>Rivers</h2>
+                    </figcaption>
+                </figure>
             </section>
             <section class="camping-card">
-                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-                <img class="icon" src="images/fire.png" alt="fire icon">
-                <h2>Camping</h2>
+                <figure>
+                    <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                    <img class="icon" src="images/fire.png" alt="fire icon">
+                    <figcaption>
+                        <h2>Camping</h2>
+                    </figcaption>
+                </figure>
             </section>
             <section class="rapids-card">
-                <img class="card-img" src="images/rafting-3.jpg" alt="rafting boat">
-                <img class="icon" src="images/rapids.png"  alt="oars icon">
-                <h2>Rapids</h2>
-            </section>  
-            <div id="background"></div> 
+                <figure>
+                    <img class="card-img" src="images/rafting-3.jpg" alt="rafting boat">
+                    <img class="icon" src="images/rapids.png"  alt="oars icon">
+                    <figcaption>
+                        <h2>Rapids</h2>
+                    </figcaption>
+                </figure>
+            </section>
+            <section class="rafting-card">
+                <figure>
+                    <img class="card-img" src="images/rafting-6.jpg" alt="Another image">
+                     <img class="icon" src="images/boat.png"  alt="boat icon">
+                    <figcaption>
+                        <h2>Rafting</h2>
+                    </figcaption>
+                </figure>
+            </section>
+            <section class="happy-card">
+                <figure>
+                    <img class="card-img" src="images/rafting-5.jpg" alt="Yet Another Image">
+                    <figcaption>
+                        <h2>Happy-client</h2>
+                    </figcaption>
+                </figure>
+            </section>
+            <div id="background"></div>
             <img class="mountains" src="images/rafting-background.jpeg" alt="Misty mountains">
             <section class="msg">
                 <h2>History</h2>
                 <p>Our company has a rich history of delivering exciting rafting trips to adventurers from around the world. Since our inception in 1995, we've been committed to safety, fun, and creating memories that last a lifetime.</p>
                 <a class="join" href="river.html">Join Us</a>
-            </section> 
+            </section>
         </main>
-
         <footer>
             <p>@2023 White Water Rafting  | Edward Santos 🌱  WDD 130</p>
             <div class="social">
