--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Edward Santos | Home</title>
+    <title> White Water Rafting</title>
     <meta name="description" content="Experience the thrill of whitewater rafting with Edward Santos. Learn more about our adventures.">
     <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
