--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Vacations in Rapids | Edward Santos | Home</title>
-    <meta name="description" content="Rafting company. Name and About us. Experience the thrill of whitewater rafting with Edward Santos. Learn more about our adventures.">
+    <title>  White Water Rafting | Edward Santos </title>
+    <meta name="description" content=" Learn more about our adventures.">
     <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
 
