--- a/quiz.html
+++ b/quiz.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>Edward Santos | WDD130</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This quiz tests your knowledge of HTML and CSS.">
+  <meta name="author" content="Edward Santos">
+  <title>HTML and CSS Quiz | WDD130</title>
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
