--- a/quiz.html
+++ b/quiz.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="This quiz tests your knowledge of HTML and CSS.">
-  <meta name="author" content="Edward Santos">
-  <title>HTML and CSS Quiz | WDD130</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edward Santos|WDD 130</title>
+    <meta name="description" content="Edward Santos's BYU-Idaho WDD 130 ">
+    <meta name="author" content="Edward Santos ">
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
