--- a/quiz.html
+++ b/quiz.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edward Santos|WDD 130</title>
-    <meta name="description" content="Edward Santos's BYU-Idaho WDD 130 ">
-    <meta name="author" content="Edward Santos ">
+    <meta name="description" content="This quiz tests your knowledge of HTML and CSS.">
+    <meta name="author" content="Edward Santos">
+    <title>HTML and CSS Quiz | WDD 130</title>
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
