--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This quiz tests your knowledge of HTML and CSS.">
+    <meta name="description" content="This quiz is perfect for anyone who wants to test their HTML and CSS skills">
     <meta name="author" content="Edward Santos">
     <title>HTML and CSS Quiz | WDD 130</title>
   <link rel="stylesheet" href="styles/quiz.css">
