--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>  White Water Rafting | Edward Santos </title>
-    <meta name="description" content=" Learn more about our adventures.">
+    <meta name="description" content=" Learn more about our adventures">
     <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
 
