--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML and CSS Quiz | WDD 130</title>
+  <meta name="description" content="Test your knowledge of HTML and CSS with this challenging quiz!">
+  <meta name="author" content="Edward Santos">
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
