--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML and CSS Quiz | WDD 130</title>
- <!-- <meta name="description" content="This quiz tests your knowledge of HTML and CSS."-->
+ <meta name="description" content="This quiz tests your knowledge of HTML and CSS.">
   <meta name="author" content="Edward Santos">
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
