--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About us</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
 
@@ -31,7 +31,7 @@
                 <h1 class="home-title">White Water Rafting</h1>
                 <h4>Adventure Awaits You</h4>
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Book Now</a>
+                    <a class="book" href="contact.html">Book Now</a>
                 </div>
             </section>
         </div>
