--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact  White Water Rafting | Edward  Santos </title>
-    <meta name="description" content="Contact Dry Oar White Water Rafting today to book your next adventure!">
+    <title>Contact|White  Water Rafting </title>
+    <meta name="description" content="Contact  White Water Rafting today to book your next adventure!">
     <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
 
