--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact|White  Water Rafting </title>
+    <title>Contact Us|White  Water Rafting </title>
     <meta name="description" content="Contact  White Water Rafting today to book your next adventure!">
     <meta name="author" content="Edward Santos">
     <link rel="stylesheet" href="styles/rafting.css">
