--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -94,7 +94,7 @@
         
             <div class="g-recaptcha" data-sitekey="YOUR_CAPTCHA_SITE_KEY"></div>
         
-            <button type="submit">Submit</button>
+            <button type="submit">Start Your Adventure</button>
         </form>
         </main>
         <footer>
