--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,6 +20,7 @@
                 <a href="about.html">About us</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contact.html">Contact Us</a>
+                <a  href="trips.html">Trips</a>
             </nav>
         </header>
 
