--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -62,6 +62,7 @@
                         <h2>Nile River</h2>
                         <p>Embark on an adrenaline-pumping adventure on the Nile River. Our experienced guides will lead you through heart-pounding rapids.</p>
                     </figcaption>
+                </figure>
             </section>
             <section class="trip-table">
                 <h2>Available Trips</h2>
